Fixed WPADMIN bar on mobile

--- a/wp-content/themes/megatherium/assets/css/theme-style.css
+++ b/wp-content/themes/megatherium/assets/css/theme-style.css
@@ -3171,4 +3171,8 @@ and open the template in the editor.
     font-size: 0.75em;
     color: #fff; }
 
+@media screen and (max-width: 600px) {
+  body #wpadminbar {
+    position: fixed; } }
+
 /*# sourceMappingURL=theme-style.css.map */
